# AppleWatchAI

./: .gitignore  .pre-commit-config.yaml  README.md  init_setup.sh  pyproject.toml
docs/mds/: index.md  notebooks.md
notebooks/: data_exploration.ipynb
notebooks/exploratory/: EDA.py  exploratory_analysis.ipynb
