[tool.poetry]
name = "AppleWatchAI"
version = "0.0.0"
description = ""
authors = ["Anas Suffo <anassaffo@gmail.com>"]
repository = "https://github.com/ansuff/AppleWatchAI"
readme = "README.md"
packages = [{include = "awai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandera = "*"
pydantic = "*"
fire = "*"
dynaconf = "*"
pandas = "*"
xmltodict = "*"
boto3 = "*"
duckdb = "*"
loguru = "*"

[tool.poetry.group.testing.dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
jupytext = "*"
pre-commit = "*"
plotly = "*"
pytest-xdist = "*"

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core==1.8.2"]
build-backend = "poetry.core.masonry.api"
